NIFI-14111 Add a check to WriteAheadStorePartition to check if a file exists before logging a message and deleting